--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.context-path=/accelerometer-api
+server.context-path=/activity
 
 logging.level.fr.duchess=INFO
 logging.level.org.springframework=INFO
