--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web") {
+    compile("org.springframework.boot:spring-boot-starter-web:1.2.3.RELEASE") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-jetty:1.2.3.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-actuator:1.2.3.RELEASE")
     compile("org.springframework.data:spring-data-cassandra:1.2.0.RELEASE")
     testCompile("junit:junit")
 }
