--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.context-path=/activity
 
 logging.level.fr.duchess=INFO
 logging.level.org.springframework=INFO
+spring.data.cassandra.keyspaceName=activityrecognition
